--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boilerplate</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.svg" />
+    <title>Travel light</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="assets/images/airplane_ticket_FILL0_wght400_GRAD0_opsz24.svg"
+    />
     <link rel="stylesheet" href="assets/css/stylesheet.css" />
     <script defer src="assets/js/script.js"></script>
   </head>
@@ -13,22 +17,21 @@
       <header>
         <div class="img-container banner">
           <img
-            src="assets/images/Placeholder_view_vector.svg"
+            src="assets/images/Firefly blue sky upwards with fluffy clouds 13652.jpg"
             alt=""
           />
         </div>
-        <h1 class="example">Header</h1>
+        <h1 class="example">TRAVEL LIGHT</h1>
         <!-- NAVIGATION EXAMPLE -->
         <nav class="example">
           <ul>
-            <li><a href="">Placeholder 1</a></li>
-            <li><a href="">Placeholder 2</a></li>
-            <li><a href="">Placeholder 3</a></li>
+            <li><a href="">Destinations</a></li>
+            <li><a href="">Order a flight</a></li>
+            <li><a href="">Customer service</a></li>
           </ul>
         </nav>
       </header>
       <main>
-        
         <!-- ARTICLE EXAMPLE -->
         <section class="example">
           <article>
@@ -45,7 +48,10 @@
         <section class="example">
           <figure>
             <div class="img-container invert">
-              <img src="assets/images/favicon.svg" alt="" />
+              <img
+                src="assets/images/airplane_ticket_FILL0_wght400_GRAD0_opsz24.svg"
+                alt=""
+              />
             </div>
             <figcaption>
               <article>
@@ -63,7 +69,10 @@
         <!-- FIGURE W/ IMAGE EXAMPLE -->
         <figure class="example">
           <div class="img-container">
-            <img src="assets/images/Placeholder_view_vector.svg" alt="" />
+            <img
+              src="assets/images/Firefly airplane seen from behind at an angle from sea level 84958.jpg"
+              alt=""
+            />
           </div>
           <figcaption>
             <article>
